# sentiment-analyzer-server-task

./: .dockerignore  .gitignore  Dockerfile  Untitled  deploy.py  deps.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: lint.sh
src/: base.py  models.py
tests/: test_server.py
